adds and tweaks

--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -19,10 +19,12 @@ rc_configured=YES
 
 # Add local overrides below
 #
-hostname=thegrill
+hostname=dragon
 dhcpcd=YES
-dhcpcd_flags="-qM fxp0"
+dhcpcd_flags="-qM re0"
 wscons=YES
 dhclient=NO
 savecore=NO
 rtclocaltime=YES
+ntpd=YES
+lpd=YES
