--- a/net/home/.tmux.conf
+++ b/net/home/.tmux.conf
@@ -12,8 +12,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # shell
-set -g default-command /usr/pkg/bin/mksh
-set -g default-shell /usr/pkg/bin/mksh
+set -g default-command /bin/ksh
+set -g default-shell /bin/ksh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
