adds and tweaks

--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -25,8 +25,15 @@ dhcpcd_flags="-qM re0"
 wscons=YES
 hostname=dragon
 dhclient=NO
-savecore=NO
-rtclocaltime=YES
 syslogd=NO
 cron=NO
 dbus=YES
+ccd=NO
+cgd=NO
+raidframe=NO
+cleartmp=NO
+virecover=NO
+savecore=NO
+motd=NO
+postfix=NO
+rtclocaltime=YES
