--- a/net/home/.config/wmrc/config
+++ b/net/home/.config/wmrc/config
@@ -38,6 +38,6 @@ GAP=${GAP:-15}    ## how large the gaps should be
 
 # borders
 
-BW=${BW:-2}                    ## border width
-ACTIVE=${ACTIVE:-0xbab9ba}     ## border color of active window
+BW=${BW:-1}                    ## border width
+ACTIVE=${ACTIVE:-0x6d7575}     ## border color of active window
 INACTIVE=${INACTIVE:-0x2c2a2b} ## border color of inactive window
