adds and tweaks

--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -20,9 +20,7 @@ rc_configured=YES
 
 # Add local overrides below.
 #
-dhcpcd=YES
-dhcpcd_flags="-qM re0"
-wscons=YES
+wscons=NO
 hostname=dragon
 dhclient=NO
 syslogd=NO
