--- a/net/usr/pkg/etc/pkgin/repositories.conf
+++ b/net/usr/pkg/etc/pkgin/repositories.conf
@@ -17,7 +17,7 @@
 #
 # ftp://ftp.netbsd.org/pub/pkgsrc/packages/NetBSD/$arch/5.1/All
 #
-# Remote http repositoryNetBSD.org/pub/pkgsrc/packages/NetBSD/amd64/8.0_RC1/All/
+# Remote http repository
 #
 # http://mirror-master.dragonflybsd.org/packages/$arch/DragonFly-$osrelease/stable/All
 #
@@ -25,6 +25,4 @@
 #
 # file:///usr/pkgsrc/packages/All
 # NetBSD OS release can look like 6.0_STABLE, do not use it as-is
-#http://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/amd64/7.1.2/All
-http://ftp.netbsd.org/pub/pkgsrc/packages/NetBSD/x86_64/8.0_2018Q1/All
-#http://ftp.netbsd.org/pub/pkgsrc/packages/NetBSD/amd64/8.0_current/All
+http://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/amd64/8.0_2018Q2/All
