--- a/net/home/Source/xst/Makefile
+++ b/net/home/Source/xst/Makefile
@@ -69,7 +69,7 @@ install: all
 	@sed "s/VERSION/${VERSION}/g" < doc/st.1 > ${DESTDIR}${MANPREFIX}/man1/st.1
 	@chmod 644 ${DESTDIR}${MANPREFIX}/man1/st.1
 	@echo Please see the README file regarding the terminfo entry of st.
-	
+	@tic -o ${DESTDIR}${PREFIX}/share/terminfo -sx doc/st.info
 uninstall:
 	@echo removing executable file from ${DESTDIR}${PREFIX}/bin
 	@rm -f ${DESTDIR}${PREFIX}/bin/st
