adds and tweaks

--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -21,7 +21,7 @@ rc_configured=YES
 # Add local overrides below.
 #
 wscons=NO
-hostname=dragon
+hostname=discovery
 dhclient=NO
 syslogd=NO
 cron=NO
