adds and tweaks

--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -20,13 +20,13 @@ rc_configured=YES
 
 # Add local overrides below.
 #
-wscons=NO
-hostname=discovery
+hostname=sausage
 dhclient=NO
+wscons=YES
+rtclocaltime=YES
 syslogd=NO
 cron=NO
-dbus=YES
-ccd=NO
+makemandb=NO
 cgd=NO
 raidframe=NO
 cleartmp=NO
@@ -34,4 +34,3 @@ virecover=NO
 savecore=NO
 motd=NO
 postfix=NO
-rtclocaltime=YES
