adds and tweaks

--- a/net/etc/rc.conf
+++ b/net/etc/rc.conf
@@ -21,16 +21,17 @@ rc_configured=YES
 # Add local overrides below.
 #
 hostname=sausage
-dhclient=NO
-wscons=YES
-rtclocaltime=YES
-syslogd=NO
-cron=NO
-makemandb=NO
-cgd=NO
+ccd=NO
 raidframe=NO
-cleartmp=NO
-virecover=NO
+cgd=NO
 savecore=NO
-motd=NO
+ppp=NO
+inetd=NO
+cron=NO
+syslogd=NO
 postfix=NO
+fccache=NO
+virecover=NO
+makemandb=NO
+devpubd=NO
+clear_tmp=NO
