--- a/net/home/.cwmrc
+++ b/net/home/.cwmrc
@@ -20,8 +20,6 @@ sticky yes
 # colors
 color activeborder   '#6d7575'
 color inactiveborder '#2c2a2b'
-color menubg         '#252525'
-color menufg         '#e3e3e3'
 color font           '#f7f7f7'
 color selfont        '#D8686D'
 
@@ -34,24 +32,19 @@ autogroup 2 "Navigator,Firefox"
 autogroup 3 "Geany,vim"
 autogroup 4 "mpv,MPlayer"
 
-# menu
-command box    "urxvtc -g 80x24+290+324"
-command surf   firefox
-command slock  "slock"
-
 # Ignore programs by that name by not drawing borders around them.
-ignore firefox
+ignore firefox60
 
 # bind-keys (window geometry based on 1920x1080)
 #bind-key 4-Return "xterm -g 80x24+290+324" # middle left
-bind-key 4-Return "urxvtc -g 80x24+290+324" # middle left
-bind-key 4-t      "urxvtc -g 80x24+980+324 -e \"tmux\"" # middle right
-bind-key 4-n      "urxvtc -g 126x72+32+32"   # left 50%
-bind-key 4-m      "urxvtc -g 126x72+995+32"  # right 50%
-bind-key 4-comma  "urxvtc -g 263x34+32+32"  # top 50%
-bind-key 4-period "urxvtc -g 263x34+32+550" # bottom 50%
+bind-key 4-Return "st -g 80x24+290+324" # middle left
+bind-key 4-t      "st -g 80x24+980+324 -e \"tmux\"" # middle right
+bind-key 4-n      "st -g 126x72+32+32"   # left 50%
+bind-key 4-m      "st -g 126x72+995+32"  # right 50%
+bind-key 4-comma  "st -g 263x34+32+32"  # top 50%
+bind-key 4-period "st -g 263x34+32+550" # bottom 50%
 bind-key SM-s     status.sh
-bind-key SM-f     firefox
+bind-key SM-f     firefox60
 bind-key SM-g     geany
 bind-key SM-d     dmenu_start.sh
 bind-key SM-r     dmenu_soma.sh
