adds and tweaks

--- a/net/home/.mkshrc
+++ b/net/home/.mkshrc
@@ -30,7 +30,8 @@ alias p='pwd'
 alias manb='man -H'
 alias grep='grep --color=auto'
 
-alias ins='sudo pkgin install'
+alias install='sudo pkgin install'
+alias remove='sudo pkgin remove'
 alias pupd='sudo pkgin update'
 alias pupg='sudo pkgin full-upgrade'
 alias search='sudo pkgin search'
@@ -62,12 +63,10 @@ alias weather='curl -4 http://wttr.in'
 alias tb='nc termbin.com 9999'
 alias ytdl='youtube-dl'
 alias ping='ping -c3'
-alias mc='mc -a -b'
+alias mc='mc -a'
 alias g='git'
 alias gc='git commit -m "adds and tweaks"'
-alias mc='mc -a'
 alias umount='sudo umount /mnt/$1'
-alias dm='dmenu_start.sh'
 alias view='imlib2_view'
 alias grab='imlib2_grab'
 
