--- a/net/home/.cwmrc
+++ b/net/home/.cwmrc
@@ -1,12 +1,10 @@
-#
 # ~/.cwmrc
-#
 
 # set font
 fontname "-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-1"
 
 # set border width
-borderwidth 4
+borderwidth 2
 
 # gaps
 gap 10 10 10 10
@@ -18,22 +16,13 @@ snapdist 10
 sticky yes
 
 # colors
-color activeborder   '#6d7575'
-color inactiveborder '#2c2a2b'
+color activeborder   '#81A1C1'
+color inactiveborder '#2E3440'
 color font           '#f7f7f7'
-color selfont        '#D8686D'
+color selfont        '#222222'
 
 # faster pussy cat
-moveamount 10
-
-# autogroup
-autogroup 1 "xterm,tmux"
-autogroup 2 "Navigator,Firefox"
-autogroup 3 "Geany,vim"
-autogroup 4 "mpv,MPlayer"
-
-# Ignore programs by that name by not drawing borders around them.
-ignore firefox60
+moveamount 20
 
 # bind-keys (window geometry based on 1920x1080)
 #bind-key 4-Return "xterm -g 80x24+290+324" # middle left
@@ -43,7 +32,6 @@ bind-key 4-n      "st -g 126x72+32+32"   # left 50%
 bind-key 4-m      "st -g 126x72+995+32"  # right 50%
 bind-key 4-comma  "st -g 263x34+32+32"  # top 50%
 bind-key 4-period "st -g 263x34+32+550" # bottom 50%
-bind-key SM-s     status.sh
 bind-key SM-f     firefox60
 bind-key SM-g     geany
 bind-key SM-d     dmenu_start.sh
@@ -54,7 +42,6 @@ bind-key SM-q     dmenu_exit.sh
 bind-key M-0	  "volume.sh 0"
 bind-key M-minus  "volume.sh -"
 bind-key M-equal  "volume.sh +"
-bind-key M-u      uptime.sh
 bind-key M-w      wetcat.sh
 
 bind-key 4-v      vmaximize
