--- a/net/home/.evilwmrc
+++ b/net/home/.evilwmrc
@@ -1,10 +1,11 @@
 # .evilwmrc
 term dmenu_start.sh
-snap 20
-bw 4
-fg #D8DEE9
-fc #88C0D0
+snap 10
+bw 2
+fg #88C0D0
+fc #D8DEE9
 mask1 mod4
 altmask shift
 bg #2E3440
 fn -*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-1
+app xclock/XClock -s
