--- a/net/home/.dmenurc
+++ b/net/home/.dmenurc
@@ -3,7 +3,8 @@
 
 . $HOME/.colorrc
 
-DMENU_FN="-fn -*-terminus-*-*-*-*-16-*-*-*-*-*-*-*"
+#DMENU_FN="-fn -*-terminus-*-*-*-*-16-*-*-*-*-*-*-*"
+DMENU_FN="menlo:size=12"
 DMENU_NB="-nb #333333"
 DMENU_NF="-nf #ffffff"
 DMENU_SB="-sb #506070"
