--- a/open/home/.tmux.conf
+++ b/open/home/.tmux.conf
@@ -12,8 +12,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # shell
-set -g default-command /bin/mksh
-set -g default-shell /bin/mksh
+set -g default-command /bin/ksh
+set -g default-shell /bin/ksh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -38,8 +38,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+#bind-key -t vi-copy 'v' begin-selection
+#bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 # use vi mode
 setw -g mode-keys vi
@@ -65,14 +65,14 @@ bind-key -n C-right swap-window -t +1
 bind : command-prompt
 
 # panes
-set -g pane-border-fg colour0
-set -g pane-active-border-fg colour0
+set -g pane-border-fg colour4
+set -g pane-active-border-fg colour7
 #set -g pane-active-border-attr blink
 
 # status line
 set -g status-justify left
-set -g status-bg colour0
-set -g status-fg colour66
+set -g status-bg colour4
+set -g status-fg colour7
 set -g status-interval 2
 
 # messaging
@@ -82,7 +82,7 @@ set -g message-command-fg colour7
 set -g message-command-bg colour6
 
 # window mode
-setw -g mode-bg colour6
+setw -g mode-bg colour0
 setw -g mode-fg colour7
 
 # resizing
@@ -90,8 +90,8 @@ setw -g aggressive-resize on
 
 # window status
 set-option -g status-position bottom
-setw -g window-status-format "#[bg=colour6,fg=colour7,noreverse] #W "
-setw -g window-status-current-format "#[bg=colour6,fg=colour7,noreverse] #W "
+setw -g window-status-format "#[bg=colour8,fg=colour7,noreverse] #W "
+setw -g window-status-current-format "#[bg=colour8,fg=colour7,noreverse] #W "
 
 # info on right
 set -g status-right-length 100
@@ -117,3 +117,5 @@ bind Z previous-layout
 
 # toggle status bar visibility
 bind t set status
+
+#run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
