--- a/open/home/.wmrc
+++ b/open/home/.wmrc
@@ -1,41 +1,28 @@
 #!/bin/sh
 # ~/.wmrc
-#
 
-FONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-1"
-ICOFONT="-wuncon-siji-medium-r-normal--10-100-75-75-c-80-iso10646-1"
+export FG=D8DEE9
+export BG=2E3440
 
-export FONT ICOFONT
+export C0=2E3440
+export C1=3B4252
+export C2=434C5E
+export C3=4C566A
+export C4=D8DEE9
+export C5=E5E9F0
+export C6=ECEFF4
+export C7=8FBCBB
 
-DMENU_FN="-fn -*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
-DMENU_NB="-nb #272c30"
-DMENU_NF="-nf #cfb9a8"
-DMENU_SB="-sb #cfb9a8"
-DMENU_SF="-sf #272c30"
+#export FONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
+#export ICOFONT="-*-ohsnap.icons-medium-r-*-*-14-*-*-*-*-*-*-*"
+export FONT="'menlo-10'"
+DMENU_FN="-fn 'menlo-10'"
+
+#DMENU_FN="-fn -*-ohsnap.icons-medium-r-*-*-12-*-*-*-*-*-*-*"
+DMENU_FN="-fn 'menlo-10'"
+DMENU_NB="-nb #2E3440"
+DMENU_NF="-nf #D8DEE9"
+DMENU_SB="-sb #81A1C1"
+DMENU_SF="-sf #2E3440"
 
 export DMENU_FN DMENU_NB DMENU_NF DMENU_SF DMENU_SB
-
-#include </home/chef/.colors/traffic>
-
-. $HOME/.colors/traffic
- 
-! Colors
-*background:   bg
-*foreground:   fg
-
-*color0:      blk
-*color8:      bblk
-*color1:      red
-*color9:      bred
-*color2:      grn
-*color10:     bgrn
-*color3:      ylw
-*color11:     bylw
-*color4:      blu
-*color12:     bblu
-*color5:      mag
-*color13:     bmag
-*color6:      cyn
-*color14:     bcyn
-*color7:      wht
-*color15:     bwht
