--- a/open/home/.tmux.conf
+++ b/open/home/.tmux.conf
@@ -12,8 +12,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # shell
-set -g default-command /bin/ksh
-set -g default-shell /bin/ksh
+set -g default-command /bin/mksh
+set -g default-shell /bin/mksh
 
 # start with window 1 (instead of 0)
 set -g base-index 1
