--- a/open/home/.mkshrc
+++ b/open/home/.mkshrc
@@ -48,7 +48,7 @@ alias disk='du -h | sort -n -r |more'
 
 alias preview='feh -g 450x300+500+200 -R .01 --zoom fill'
 #alias rec='ffmpeg -f x11grab -s 1280x800 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
-alias rec='ffmpeg1 -f x11grab -s 1920x1080 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
+alias rec='ffmpeg -f x11grab -s 1920x1080 -an -i :0.0 -c:v libvpx -b:v 5M -crf 10 -quality realtime -y -loglevel quiet'
 
 alias info='info.sh'
 alias todo='vim ~/todo'
