adds and tweaks

--- a/open/home/.config/mpd/mpd.conf
+++ b/open/home/.config/mpd/mpd.conf
@@ -1,4 +1,4 @@
-# $OpenBSD: mpd.conf, 2016/09/11 10:30:00 chef Exp $
+# $OpenBSD: mpd.conf, 2018/08/21 07:21:00 chef Exp $
 
 # Required files
 db_file            "~/.config/mpd/database"
@@ -10,10 +10,18 @@ playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
 state_file         "~/.config/mpd/state"
 sticker_file       "~/.config/mpd/sticker.sql"
+#bind_to_address   "~/.config/mpd/socket"
+bind_to_address    "127.0.0.1"
 
 audio_output {
-	type			"ao"
-	name			"Libao Audio Device"
-	mixer_type      	"software"
-	driver			"sndio"
+	type		"sndio"
+	name		"sndio output"
+	mixer_type	"software"
+}
+
+audio_output {
+    type               "fifo"
+    name               "my_fifo"
+    path               "/tmp/mpd.fifo"
+    format             "44100:16:2"
 }
