--- a/open/home/.ncmpcpp/config
+++ b/open/home/.ncmpcpp/config
@@ -54,9 +54,13 @@ mpd_port = "6600"
 # Visualizer #
 ##############
 
-# visualizer_sync_interval = "30"
-# visualizer_in_stereo = "yes"
-# visualizer_type = "wave_filled"
+visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_output_name = "my_fifo"
+visualizer_sync_interval = "30" 
+visualizer_in_stereo = "yes"
+#visualizer_type = "spectrum"
+visualizer_type = "wave_filled"
+visualizer_look = "+|"
 
 ##########
 # Colors #
