adds and tweaks

--- a/open/home/.mkshrc
+++ b/open/home/.mkshrc
@@ -20,23 +20,17 @@ alias ln='ln -i'
 #alias ..='cd ../'
 #alias ...='cd ../../'
 #alias ....='cd ../../../'
-alias ls='colorls -G'
-alias la='colorls -A'
-alias ll='colorls -L'
+alias la='ls -la'
 alias md='mkdir -p -v'
 alias rd='rmdir -v'
 alias h='fc -l'
 alias p='pwd'
-alias manb='man -H'
-alias grep='grep --color=auto'
 
-alias install='sudo pkgin install'
-alias remove='sudo pkgin remove'
-alias pupd='sudo pkgin update'
-alias pupg='sudo pkgin full-upgrade'
-alias search='sudo pkgin search'
-alias autoremove='sudo pkgin autoremove'
-alias clean='sudo pkgin clean'
+alias ins='sudo pkg_add'
+alias del='sudo pkg_delete'
+alias pupd='sudo pkg_add -D snap -Iuv'
+alias search='sudo pkg_info -Q'
+alias autoremove='sudo pkg_delete -a'
 
 # REBOOT/SHUTDOWN
 alias reboot='sudo /sbin/shutdown -r now "R E B O O T"'
@@ -53,7 +47,6 @@ alias rec='ffmpeg -f x11grab -s 1920x1080 -an -i :0.0 -c:v libvpx -b:v 5M -crf 1
 alias info='info.sh'
 alias todo='vim ~/todo'
 alias rnet='sudo /etc/rc.d/network restart'
-alias zzz='zzz.sh'
 alias shootme='DISPLAY=:0 import -window root ~/Pictures/scrots/scrot-$(date +%m-%d-%Y-%H-%M-%S).png'
 alias free='top -n 1 | head -n 5 | tail -n 2'
 alias blankf='cdrecord dev=/dev/rcd0d blank=fast'
